--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Connects Netatmo data to a Weather Underground PWS station",
   "main": "server.js",
   "dependencies": {
-    "netatmo-wunderground-pws": "^1.1.0"
+    "express": "^4.19.2",
+    "netatmo-wunderground-pws": "^1.1.1"
   },
   "scripts": {
     "start": "node server.js"
